* added better parsing/handling of use_authentication to match Nagios defaults.
* fixed authz parsing to use only the nagios cgi config file for authorization
   parameters.
* added a slew of authentication unit tests.
* added better warnings when javascript is disabled.
* added option to disable javascript warnings even though it results in
   limited functionality.
* fixed typo for ntp,offset in labels.conf.
* fixed javascript bug in selection of data sources.
* added more feedback when javascript is disabled (Michael Urban).
* added better error handling when output and/or perfdata are not available.
   this fixes the 'spotty data' behavior that occurred when batch processing 
   would fail prematurely due to missing perfdata (hinder90 and ljorg6)
* added explicit handling and reporting of ignored output/perfdata.  if your
   map file contains any 'short-circuit' rules, they should return an array
   with the string 'ignore' so they are reported as ignored rather than as not
   recognized.
* added better reporting of missing host, service, output and/or perfdata.
* fixed timestamp bug (Matthias Motzke).
* fixed heartbeat/stepsize/resolution bug (obermufti).
* fixed zooming on ie8 (derekdawson).
* added showconfig.cgi script to facilitate diagnosing of problems.
* added better handling and reporting of errors when creating rrddir.
* added new configuration options (see nagiosgraph.conf for details).  these
   options enable per-host/service/db specification of the RRA step and xfiles
   factor, as well as the use of LAST.
     xff
     xffs
     step
     steps
     lasts
* added example map rules for nsclient++ from kbn, rambling techie, and
    claudio kuenzler.  these rules should not be necessary if your map file
    contains the default map rule and a fairly recent version of nsclient++.

1.4.3 2010-06-07

* new configuration options (see nagiosgraph.conf for details):
     stack
* added graph zooming.  zooming happens in-place (no separate window).